--- a/drools-wb-screens/drools-wb-globals-editor/drools-wb-globals-editor-backend/pom.xml
+++ b/drools-wb-screens/drools-wb-globals-editor/drools-wb-globals-editor-backend/pom.xml
@@ -115,17 +115,18 @@
 
     <dependency>
       <groupId>org.kie.workbench.services</groupId>
-      <artifactId>kie-wb-common-datamodel-backend</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.kie.workbench.services</groupId>
       <artifactId>kie-wb-common-refactoring-backend</artifactId>
     </dependency>
 
     <dependency>
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-commons-editor-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.kie.workbench.services</groupId>
+      <artifactId>kie-wb-common-datamodel-backend</artifactId>
+      <scope>compile</scope>
     </dependency>
 
     <!-- Test dependencies -->
@@ -164,6 +165,7 @@
       <artifactId>logback-classic</artifactId>
       <scope>test</scope>
     </dependency>
+
 
   </dependencies>
 
